--- a/responsive.css
+++ b/responsive.css
@@ -1,3 +1,36 @@
 @media screen and (max-width: 420px){
+    .container{
+        max-width: 420px;
+        padding: 0 18px;
+    }
+    .row{
+        width: 100%;
+        max-width: 420px;
+    }
     
+    #lezioni .row>.left, #lezioni .row>.right {
+        width: 100%;
+    }
+
+    #steps .row>.left,
+    #steps .row>.central,
+    #steps .row>.right {
+    float: left;
+    width: 100%;
+    }
+
+    #why .row>.first,
+    #why .row>.second,
+    #why .row>.third {
+    margin-top: 0px;
+    }
+
+    h1{
+        font-size: 30px;
+    }
+
+    img{
+        height: 100px;
+        margin-top: 38px;
+    }
 }
